Localization switcher got implemented -switchers visibility got fixed

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -15,3 +15,4 @@ $footer-color: var(--footer-color);
 $border-color: var(--border-color);
 $mask: var(--mask-color);
 $light-glow: var(--light-glow);
+$settings-default: var(--settings-default);
